--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ a {
   padding-left: 46px;
 }
 
-.page-header__info-item:nth-of-type(4) {
+.page-header__info-item:nth-of-type(4) {  
   width: 30px;
   margin-left: auto;
 }
@@ -140,6 +140,14 @@ a {
 .services {
   display: flex;
   flex-wrap: wrap;
+  
+  background-image: url("../img/man.png");
+  background-repeat: no-repeat;
+  background-position: center  ;
+  padding-top: 110px;
+    padding-bottom: 700px;
+    
+    
 }
 .page-header__info-item:nth-of-type(4)::before {
   background-image: url("../img/search.png");
@@ -163,29 +171,120 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
-.services-img{
-  background-image: url("../img/mustach.png");
-  width: 69px;
-  height: 18px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.services__item{
-  display: flex;
-  justify-content: space-between;
-  width: 523px;
+  .services-img{
+    background-image: url("../img/mustach.png");
+    width: 69px;
+    height: 18px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .services__title{
+  text-align: center;
+}
+li{
+  list-style-type:none;
+}
+
+.services__text{
+  margin-left: 24px;
+  position: relative;
+}
+.services__item-group:nth-of-type(1) .services__text{
+  text-align: end;
+}
+    .services__item-group:nth-of-type(1) .services__item:nth-of-type(1)  .services__text::after{
+  content: "";
+  background-image: url("../img/hair-cut.png");
+  width: 92px;
+  height: 92px;
+  top: 0px;
+  right: -130px;
+  position: absolute;
+  background-repeat: no-repeat;
+}
+.services__item-group:nth-of-type(1) .services__item:nth-of-type(2)  .services__text::after{
+  content: "";
+  background-image: url("../img/hair-wash.png");
+  width: 92px;
+  height: 92px;
+  top: 0px;
+  right: -130px;
+  position: absolute;
+  background-repeat: no-repeat;
+}
+.services__item-group:nth-of-type(2) .services__item:nth-of-type(1)  .services__text::after{
+  content: "";
+  background-image: url("../img/hair-styling.png");
+  width: 92px;
+  height: 92px;
+  top: 0px;
+  right: 415px;
+  position: absolute;
+  background-repeat: no-repeat;
+}
+.services__item-group:nth-of-type(2) .services__item:nth-of-type(2)  .services__text::after{
+  content: "";
+  background-image: url("../img/shave.png");
+  width: 92px;
+  height: 92px;
+  top: 0px;
+  right: 415px;
+  position: absolute;
+  background-repeat: no-repeat;
+}
+
+.services__list {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.services__item-group{
+  width: 100%;
+}
+.services__description{
+  width: 554px;
   
+}
+.section-title{
+  display: flex;
+  justify-content: center;
+}
+ .services-img{
+  display: flex;
+  justify-content: center;
+ }
+.services__description{ 
+ padding-left: 641px;
+}
+  
+.services__item-group:nth-of-type(2){
+  padding-left: 795px;
+}
+.services__item-group:nth-of-type(1){
+  margin: 0;
+  padding-left: 50px;
+  display: inline-block;
+}
+.services__item{
+  width: 450px;
+}
+.services__item-group:nth-of-type(2)  .services__title{
+  text-align: left;
+  margin-left: 22px;
 }
 .page-header__info-link:hover {
   color: #985336;
 }
-
+.services-group{
+  width: 100%;
+  height: 400px;
+}
 .page-header__info-link:focus {
   color: #985336;
 }
-
+.services__item-group:nth-of-type(2) .services__description:nth-of-type(2){
+padding-top: 200px
+}
 .page-header__info-link:active {
   color: rgba(152, 83, 54, 0.6);
 }
