--- a/css/style.css
+++ b/css/style.css
@@ -740,7 +740,14 @@ a {
 .appointment__description {
   color: #ffffff;
 }
+.appointment__btn-reset{
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  color: #995437;
+  text-decoration: underline;
 
+}
 .barbers__name {
   font-weight: bold;
   font-size: 24px;
@@ -942,9 +949,8 @@ a {
   box-sizing: border-box;
   width: 100%;
   padding: 10px;
-  
-
   padding-bottom: 11px;
+
   color: white;
 
   background-color: transparent;
@@ -971,8 +977,8 @@ a {
 .appointment__datefield {
   box-sizing: border-box;
   width: 100%;
-  
   padding: 7px 10px;
+
   color: white;
 
   background-color: transparent;
@@ -999,6 +1005,8 @@ a {
 }
 .appointment__message {
   width: 100%;
+  color: #808080;
+  background-color: transparent;
 }
 
 .barbers__list {
@@ -1021,13 +1029,21 @@ a {
   width: 1920px;
   margin: 0 auto;
 }
-.modal{
+.modal {
   position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 10000000000;
-  position: fixed;
+  left: calc(50% - 640px);
+  top: calc(50% - 447px);
+  box-sizing: border-box;
+  padding: 70px;
 }
-.modal--hide{
+.modal--hide {
   display: none;
+}
+input:-webkit-autofill{
+ -webkit-box-shadow: inset 0 0 0 50px #000000 !important;
+ -webkit-text-fill-color: #999 !important;
 }
